Fixed a misalignment on iPad

--- a/static_files/scss/jj-storefront.scss
+++ b/static_files/scss/jj-storefront.scss
@@ -759,7 +759,7 @@ and (max-width : 1200px) {
                         margin-bottom : 9px;
 
 
-                        &:nth-child(3n+3) {
+                        &:nth-child(3n+2) {
                             margin : auto 9px;
                         }
 
